# AlgoVaultPy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml  test.yml  type-check.yml
src/algo_vault/leetcode/: lc1480_notes.md  lc1480_running_sum.py
src/algo_vault/leetcode/lc1480_running_sum/: impl.py  notes.md
tests/test_leetcode/: test_lc1480_running_sum.py
