[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algo-vault"
version = "0.1.0"
description = "Python coding challenges with tests (pytest)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tony Ruiz", email = "tonyruizo@pm.me" }]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy"
]

[project.urls]
Repository = "https://github.com/tonyruizo/AlgoVaultPy"

[tool.hatch.build.targets.wheel]
packages = ["src/algo_vault"]
include = ["src/algo_vault/py.typed"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
mypy_path = "src"
strict = true
