[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algo-vault"
version = "0.1.0"
description = "Python coding challenges with tests (pytest)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tony Ruiz", email = "tonyruizo@pm.me" }]

[project.urls]
Repository = "https://github.com/tonyruizo/AlgoVaultPy"

[tool.hatch.build.targets.wheel]
packages = ["src/algo_vault"]
include = ["src/algo_vault/py.typed"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = "src"
strict = true
namespace_packages = true
follow_imports = "normal"
install_types = true

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy"
]